--- a/project/common-impl/src/main/resources/hologram/def.yml
+++ b/project/common-impl/src/main/resources/hologram/def.yml
@@ -6,7 +6,7 @@ hologram:
     lineSpacing: 0.25
     visibleCondition: 'check "cnm" != "草泥马"'
   context:
-    - "&f这是 &bGeekHologram &f全息面板插件 {highSet: 0.15}"
+    - "&f这是 &bNeonHologram &f全息面板插件 {highSet: 0.15}"
     - "{item: material:PAPER,model:0}" # 这是一个自定义物品展示行
     - ""
     - "&f时间: &e%server_time_HH:mm:ss% {update:20}" # 这是一行动态更新的文字
